--- a/pack.toml
+++ b/pack.toml
@@ -13,21 +13,9 @@ ipkg   = "sqlite3-rio.ipkg"
 type   = "local"
 path   = "docs"
 ipkg   = "docs.ipkg"
-#
-# [custom.all.quantifiers-extra]
-# type   = "git"
-# url    = "https://github.com/stefan-hoeck/idris2-quantifiers-extra"
-# commit = "latest:main"
-# ipkg   = "quantifiers-extra.ipkg"
 
-[custom.all.array]
+[custom.all.pretty-show]
 type   = "github"
-url    = "https://github.com/stefan-hoeck/idris2-array"
+url    = "https://github.com/stefan-hoeck/idris2-pretty-show"
 commit = "latest:main"
-ipkg   = "array.ipkg"
-
-[custom.all.bytestring]
-type   = "github"
-url    = "https://github.com/stefan-hoeck/idris2-bytestring"
-commit = "latest:main"
-ipkg   = "bytestring.ipkg"
+ipkg   = "pretty-show.ipkg"
